--- a/AngularBasics/src/app/components/users/users.component.html
+++ b/AngularBasics/src/app/components/users/users.component.html
@@ -1,18 +1,28 @@
 <p>users works!</p>
 
-<div>{{allowNewUser}}</div>
+
 
 <br>
-<div class="my-2 ui-g">
-    <label for="">User Name</label>
-    <input type="text" class="form-control"  [(ngModel)]="userName" />
-</div>
-<button class="btn btn-primary" [disabled]="!allowNewUser" (click)="changeUserCreatedStatus()">Add User</button>
-<div *ngIf="statusValue; else noUser">{{userCreatedStatus}}</div>
-<ng-template #noUser>
-    <div>No user is created {{userName}}</div>
-</ng-template>
-<div>{{userName}}</div>
-<div>{{userCreatedStatus}}</div>
+<div class="row">
+    <div class="col-md-2">
 
-<div [ngStyle]="{'background-color' : getColor()}">Now user is {{userStatus}}</div>
+    </div>
+    <div class="col-md-8">
+        <div>{{allowNewUser}}</div>
+        <div class="my-2 ui-g">
+            <label for="">User Name</label>
+            <input type="text" class="form-control" [(ngModel)]="userName" />
+        </div>
+        <button class="btn btn-primary" [disabled]="!allowNewUser" (click)="changeUserCreatedStatus()">Add User</button>
+        <ng-template #noUser>
+            <div>No user is created {{userName}}</div>
+        </ng-template>
+        <div>{{userName}}</div>
+
+        <div [ngStyle]="{'background-color' : getColor()}" [ngClass]="{offline: userStatus==='offline'}">Now user is
+            {{userStatus}}</div>
+    </div>
+    <div class="col-md-2">
+
+    </div>
+</div>
