--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-users></app-users>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <app-users2></app-users2>
+        </div>
+    </div>
+</div>
