--- a/AngularBasics/src/app/components/users/users.component.html
+++ b/AngularBasics/src/app/components/users/users.component.html
@@ -1,7 +1,4 @@
 <p>users works!</p>
-
-
-
 <br>
 <div class="row">
     <div class="col-md-2">
@@ -19,9 +16,11 @@
         </ng-template>
         <div>{{userName}}</div>
 
-        <div [ngStyle]="{'background-color' : getColor()}" [ngClass]="{offline: userStatus==='offline'}">Now {{user}} is
-            {{userStatus}}</div>
-        <div *ngFor="let user of users">{{user}}</div>
+        <div *ngFor="let user of users">
+            <div [ngStyle]="{'background-color' : getColor()}" [ngClass]="{offline: userStatus==='offline'}">Now {{user}} is
+                {{userStatus}}</div>
+            <div>{{user}}</div>
+        </div>
     </div>
     <div class="col-md-2">
 
