Getting access to the ng-content HTML template using @ContentChild in Angular

--- a/AngularBasics/src/app/components/users2/users2.component.html
+++ b/AngularBasics/src/app/components/users2/users2.component.html
@@ -6,6 +6,6 @@
     <h3>Users List</h3>
     <button class="btn btn-primary" (click)="onNameChanged()">Change Name</button>
     <app-user *ngFor="let user of usersList" [username]="user" [name]="name">
-        <p>User Name: {{user}}</p>
+        <p #userParagraph>User Name: {{user}}</p>
     </app-user>
 </div>
