Create Basic Custom attribute Directive in Angular

--- a/AngularBasics/src/app/components/users2/users2.component.html
+++ b/AngularBasics/src/app/components/users2/users2.component.html
@@ -9,3 +9,7 @@
         <p #userParagraph>User Name: {{user}}</p>
     </app-user>
 </div>
+
+<div>
+    <appHeighlightText>There is a Angular Directive</appHeighlightText>
+</div>
