Using Renderer2 to create the custom attribute directive to maipulate DOM in Angular

--- a/AngularBasics/src/app/components/users2/users2.component.html
+++ b/AngularBasics/src/app/components/users2/users2.component.html
@@ -11,5 +11,6 @@
 </div>
 
 <div>
-    <appHeighlightText>There is a Angular Directive</appHeighlightText>
+    <div appHeighlightText>There is a Angular Directive</div>
+    <div appRenderHighlight>There is an Another Angular Directive</div>
 </div>
