Understand the Concept of the Structural Directives how it works behind in the Angular

--- a/AngularBasics/src/app/components/users2/users2.component.html
+++ b/AngularBasics/src/app/components/users2/users2.component.html
@@ -12,5 +12,11 @@
 
 <div>
     <div appHeighlightText>There is a Angular Directive</div>
-    <div appRenderHighlight>There is an Another Angular Directive</div>
+    <div appRenderHighlight [defaultColor]="'black'" [highlightColor]="'orange'">There is an Another Angular Directive</div>
 </div>
+
+<div *ngIf="isAvailable">Show that statement when isAvailable is true</div>
+
+<ng-template [ngIf]="isAvailable">
+    Show that statement when isAvailable is true
+</ng-template>
