--- a/AngularBasics/src/app/components/users/users.component.html
+++ b/AngularBasics/src/app/components/users/users.component.html
@@ -1,9 +1,7 @@
 <p>users works!</p>
 <br>
 <div class="row">
-    <div class="col-md-2">
-
-    </div>
+    <div class="col-md-2"></div>
     <div class="col-md-8">
         <div>{{allowNewUser}}</div>
         <div class="my-2 ui-g">
@@ -15,14 +13,12 @@
             <div>No user is created {{userName}}</div>
         </ng-template>
         <div>{{userName}}</div>
-
         <div *ngFor="let user of users">
-            <div [ngStyle]="{'background-color' : getColor()}" [ngClass]="{offline: userStatus==='offline'}">Now {{user}} is
+            <div [ngStyle]="{'background-color' : getColor()}" [ngClass]="{offline: userStatus==='offline'}">Now
+                {{user}} is
                 {{userStatus}}</div>
             <div>{{user}}</div>
         </div>
     </div>
-    <div class="col-md-2">
-
-    </div>
+    <div class="col-md-2"></div>
 </div>
