--- a/AngularBasics/src/app/components/users2/users2.component.html
+++ b/AngularBasics/src/app/components/users2/users2.component.html
@@ -29,3 +29,10 @@
 <div *appAlternateIf="isAvailable">
     This condition enable with custom directive
 </div>
+
+<div [ngSwitch]="value">
+    <div *ngSwitchCase="5">Value is 5</div>
+    <div *ngSwitchCase="10">Value is 10</div>
+    <div *ngSwitchCase="15">Value is 15</div>
+    <div *ngSwitchDefault>Value is default</div>
+</div>
