--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -1,7 +1,24 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <app-users2></app-users2>
+    <div class="row my-3">
+      <div class="col-md-3">
+        <ui class="nav flex-column">
+          <li class="nav-item">
+            <a routerLink="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="/users">Users</a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="/categories">Categories</a>
+          </li>
+        </ui>
+      </div>
+      <div class="col-md-9">
+        <div class="row">
+          <div class="col-md-12">
+            <router-outlet></router-outlet>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
