--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -1,24 +1,25 @@
 <div class="container">
     <div class="row my-3">
-      <div class="col-md-3">
-        <ui class="nav flex-column">
-          <li class="nav-item">
-            <a routerLink="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/users">Users</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/categories">Categories</a>
-          </li>
-        </ui>
-      </div>
-      <div class="col-md-9">
-        <div class="row">
-          <div class="col-md-12">
-            <router-outlet></router-outlet>
-          </div>
+        <div class="col-md-3">
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/" routerLinkActive="active"
+                        [routerLinkActiveOptions]="{exact:true}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a>
+                </li>
+            </ul>
         </div>
-      </div>
+        <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-12">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
