Passing and Fetching Parameters to Routes using ActivatedRoute snapshot in Angular

--- a/AngularBasics/src/app/components/person/person.component.html
+++ b/AngularBasics/src/app/components/person/person.component.html
@@ -1,5 +1,6 @@
 <p>person works!</p>
 
 <div>
-    <button (click)="onCategoriesLink()">Go to Categories</button>
+    <div>User with id is {{user.id}}</div>
+    <div>User with name is {{user.name}}</div>
 </div>
