--- a/AngularBasics/src/app/components/person/person.component.html
+++ b/AngularBasics/src/app/components/person/person.component.html
@@ -4,18 +4,15 @@
     <div>User with Name is {{user.name}}</div>
 </div>
 
-<ul class="nav flex-column">
-    <li class="nav-item">
-        <a [routerLink]="['/users',1,'A']" class="nav-link">Get A Details</a>
-    </li>
-    <li class="nav-item">
-        <a [routerLink]="['/users',2,'B']" class="nav-link">Get B Details</a>
-    </li>
-    <li class="nav-item">
-        <a [routerLink]="['/users',3,'C']" class="nav-link">Get C Details</a>
-    </li>
-</ul>
+<div>
+    <app-edit-user></app-edit-user>
+</div>
+
+<div>
+    <button (click)="onUserEdit()">User Edit</button>
+</div>
 
 <div>
     <router-outlet></router-outlet>
 </div>
+
