--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <button (click)="onLoginClick()">LogIn</button>
+            <button (click)="onLogOutClick()">LogOut</button>
+        </div>
+    </div>
     <div class="row my-3">
         <div class="col-md-3">
             <ul class="nav flex-column nav-pills">
