--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -5,7 +5,7 @@
             <button (click)="onLogOutClick()">LogOut</button>
         </div>
     </div>
-    <div class="row my-3">
+    <div class="row my-3">          
         <div class="col-md-3">
             <ul class="nav flex-column nav-pills">
                 <li class="nav-item">
@@ -21,6 +21,11 @@
             </ul>
         </div>
         <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-12">
+                    <div *ngIf="userAdded">User Added Button Clicked</div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-12">
                     <router-outlet></router-outlet>
