--- a/AngularBasics/src/app/components/person/person.component.html
+++ b/AngularBasics/src/app/components/person/person.component.html
@@ -12,7 +12,7 @@
     <button (click)="onUserEdit()">User Edit</button>
 </div>
 
-<div>
+<!-- <div>
     <router-outlet></router-outlet>
-</div>
+</div> -->
 
