--- a/AngularBasics/src/app/components/users/users.component.html
+++ b/AngularBasics/src/app/components/users/users.component.html
@@ -1,7 +1,13 @@
 <p>users works!</p>
 <br>
 <div class="row">
-    <div class="col-md-2"></div>
+    <div class="col-md-2">
+        <div class="row">
+            <div class="col-md-12">
+                <button type="button" (click)="onUserAdded()">User Added</button>
+            </div>
+        </div>
+    </div>
     <div class="col-md-8">
         <div>{{allowNewUser}}</div>
         <div class="my-2 ui-g">
