--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/templateForm" routerLinkActive="active">template Form</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
