--- a/AngularBasics/src/app/components/template-form/template-form.component.html
+++ b/AngularBasics/src/app/components/template-form/template-form.component.html
@@ -1,14 +1,15 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <form action="" (ngSubmit)="onFormSubmit(f)" #f="ngForm">
+            <form action="" (ngSubmit)="onFormSubmit()" #f="ngForm">
                 <div class="form-group">
                     <label for="username">User Name</label>
-                    <input type="text" class="form-control" id="username" name="username" ngModel />
+                    <input type="text" class="form-control" id="username" name="username" ngModel required />
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" ngModel />
+                    <input type="text" class="form-control" id="email" name="email" ngModel required email #email="ngModel"/>
+                    <span class="help-text" *ngIf="!email.valid && email.touched">Please enter valid email</span>
                 </div>
                 <div class="form-group">
                     <label for="gender">Gender</label>
@@ -18,7 +19,7 @@
                     </select>
                 </div>
                 <div class="md-2">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
                 </div>
             </form>
         </div>
