--- a/AngularBasics/src/app/components/template-form/template-form.component.html
+++ b/AngularBasics/src/app/components/template-form/template-form.component.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <form action="" (ngSubmit)="onFormSubmit()" #f="ngForm">
+                <button (click)="fillValues()" class="btn btn-sm btn-info">Fill Values</button>
                 <div *ngIf="!userData.valid && userData.touched">User data is invalid</div>
                 <div ngModelGroup="userData" #userData="ngModelGroup">
                     <div class="form-group">
