--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/templateForm" routerLinkActive="active">template Form</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/reactiveForm" routerLinkActive="active">reactive Form</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
