--- a/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <form action="">
+            <form [formGroup]="signUpForm" (ngSubmit)='onSubmit()'>
                 <div class="form-group">
                     <label for="">UserName</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="username">
                 </div>
                 <div class="form-group">
                     <label for="">Email</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="email">
                 </div>
                 <div *ngFor="let gender of genders">
                     <label for="">
-                        <input type="radio" name="gender" id="" [value]="gender" />{{gender}}
+                        <input type="radio" name="gender" id="" [value]="gender" formControlName="gender"/>{{gender}}
                     </label>
                 </div>
                 <div>
