--- a/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
@@ -5,14 +5,16 @@
                 <div class="form-group">
                     <label for="">UserName</label>
                     <input type="text" class="form-control" formControlName="username">
+                    <span class="help-block" *ngIf="!signUpForm.get('username').valid && signUpForm.get('username').touched">Please enter valid username</span>
                 </div>
                 <div class="form-group">
                     <label for="">Email</label>
                     <input type="text" class="form-control" formControlName="email">
+                    <span class="help-block" *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">Please enter valid email</span>
                 </div>
                 <div *ngFor="let gender of genders">
                     <label for="">
-                        <input type="radio" name="gender" id="" [value]="gender" formControlName="gender"/>{{gender}}
+                        <input type="radio" name="gender" id="" [value]="gender" formControlName="gender" />{{gender}}
                     </label>
                 </div>
                 <div>
