--- a/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
@@ -2,15 +2,21 @@
     <div class="row">
         <div class="col-md-12">
             <form [formGroup]="signUpForm" (ngSubmit)='onSubmit()'>
-                <div class="form-group">
-                    <label for="">UserName</label>
-                    <input type="text" class="form-control" formControlName="username">
-                    <span class="help-block" *ngIf="!signUpForm.get('username').valid && signUpForm.get('username').touched">Please enter valid username</span>
-                </div>
-                <div class="form-group">
-                    <label for="">Email</label>
-                    <input type="text" class="form-control" formControlName="email">
-                    <span class="help-block" *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">Please enter valid email</span>
+                <div formGroupName="userData">
+                    <div class="form-group">
+                        <label for="">UserName</label>
+                        <input type="text" class="form-control" formControlName="username">
+                        <span class="help-block"
+                            *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched">Please enter
+                            valid username</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Email</label>
+                        <input type="text" class="form-control" formControlName="email">
+                        <span class="help-block"
+                            *ngIf="!signUpForm.get('userData.email').valid && signUpForm.get('userData.email').touched">Please enter valid
+                            email</span>
+                    </div>
                 </div>
                 <div *ngFor="let gender of genders">
                     <label for="">
