--- a/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/AngularBasics/src/app/components/reactive-forms/reactive-forms.component.html
@@ -7,9 +7,11 @@
                         <label for="">UserName</label>
                         <input type="text" class="form-control" formControlName="username">
                         <span class="help-block"
-                            *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched">Please
-                            enter
-                            valid username</span>
+                            *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched">
+                            <span *ngIf="signUpForm.get('userData.username').errors.required">UserName is
+                                required</span>
+                            <span *ngIf="signUpForm.get('userData.username').errors.nameIsRestricted">UserName is not valid</span>
+                        </span>
                     </div>
                     <div class="form-group">
                         <label for="">Email</label>
