--- a/AngularBasics/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/AngularBasics/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,8 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div *ngFor="let user of users" class="my-3">
-                <div>Name: {{user.name|shorten:5}}</div>
+            <input type="text" class="form-control" [(ngModel)]="filterString" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div *ngFor="let user of users|filter:filterString" class="my-3">
+                <div>Name: {{user.name|shorten:8}}</div>
                 <div>Joined Date: {{user.joinedDate|date:'fullDate'|uppercase}}</div>
             </div>
         </div>
