--- a/AngularBasics/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/AngularBasics/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,6 +1,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            <button (click)="onAddUser()">Add User</button>
+        </div>
+    </div>
+    <div class="my-2">
+        <div>{{appStatus | async}}</div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <input type="text" class="form-control" [(ngModel)]="filterString" />
         </div>
     </div>
