Understanding Http Request.Make a Http Post Request Call through HttpClientModule

--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/filterPipes" routerLinkActive="active">filter pipes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/posts" routerLinkActive="active">posts</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
