--- a/AngularBasics/src/app/components/posts/posts.component.html
+++ b/AngularBasics/src/app/components/posts/posts.component.html
@@ -15,10 +15,15 @@
                     Content is required
                 </div>
             </div>
-            <div class="my-2">
-                <button type="submit" class="btn btn-primary">Add Post</button>
+            <div class="col-md-12">
+                <div class="my-2">
+                    <button type="submit" class="btn btn-primary">Add Post</button>
+                </div>
             </div>
         </form>
+    </div>
+    <div>
+        <a href="#" (click)="onClearPost($event)">Clear Post</a>
     </div>
     <div>
         <table class="table">
