--- a/AngularBasics/src/app/components/posts/posts.component.html
+++ b/AngularBasics/src/app/components/posts/posts.component.html
@@ -26,7 +26,7 @@
         <a href="#" (click)="onClearPost($event)">Clear Post</a>
     </div>
     <div>
-        <table class="table">
+        <table class="table" *ngIf="!error">
             <thead>
                 <th>Title</th>
                 <th>Content</th>
@@ -38,5 +38,6 @@
                 </tr>
             </tbody>
         </table>
+        <div class="alert alert-danger">{{error}}</div>
     </div>
 </div>
