--- a/AngularBasics/src/app/components/posts/posts.component.html
+++ b/AngularBasics/src/app/components/posts/posts.component.html
@@ -38,6 +38,6 @@
                 </tr>
             </tbody>
         </table>
-        <div class="alert alert-danger">{{error}}</div>
+        <div class="alert alert-danger" *ngIf="error">{{error}}</div>
     </div>
 </div>
