--- a/AngularBasics/src/app/app.component.html
+++ b/AngularBasics/src/app/app.component.html
@@ -1,13 +1,19 @@
 <div class="container">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-12">
             <button (click)="onLoginClick()">LogIn</button>
             <button (click)="onLogOutClick()">LogOut</button>
         </div>
+    </div> -->
+    <div style="text-align: center;">
+        <h3>Angular Basic</h3>
     </div>
-    <div class="row my-3">          
+    <div class="row my-3">
         <div class="col-md-3">
             <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/auth" routerLinkActive="active">Authentication</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/" routerLinkActive="active"
                         [routerLinkActiveOptions]="{exact:true}">Home</a>
